--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -61,7 +61,7 @@
                             >
                         </li>
                         <li class="nav-item container-fluid justify-content-end">
-                            <a href="#contacto" class="nav-link">CONTACTO</a>
+                            <a href="contacto.html" class="nav-link">CONTACTO</a>
                         </li>
                     </ul>
                 </div>
