--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
             rel="stylesheet"
         />
-        <link rel="icon" type="image/png" sizes="32x32" href="resources/images/logo.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="resources/images/logo.png">
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="resources/images/logo.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="resources/images/logo.png"
+        />
         <link rel="stylesheet" href="css/style.css" />
         <title>Consultora de Software</title>
     </head>
@@ -35,7 +45,7 @@
                         class="img-fluid"
                         src="resources/images/logo.png"
                         alt="Logo"
-                        style="max-width: 50px;"
+                        style="max-width: 50px"
                     />
                 </a>
                 <button
@@ -48,20 +58,31 @@
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto justify-content-end p-0">
-                        <li class="nav-item container-fluid justify-content-end">
+                        <li
+                            class="nav-item container-fluid justify-content-end"
+                        >
                             <a href="index.html" class="nav-link">HOME</a>
                         </li>
-                        <li class="nav-item container-fluid justify-content-end">
+                        <li
+                            class="nav-item container-fluid justify-content-end"
+                        >
                             <a href="precios-servicios.html" class="nav-link"
                                 >PRECIOS/SERVICIOS</a
+                            >
                         </li>
-                        <li class="nav-item container-fluid justify-content-end">
+                        <li
+                            class="nav-item container-fluid justify-content-end"
+                        >
                             <a href="sobre-nosotros.html" class="nav-link"
                                 >SOBRE NOSOTROS</a
                             >
                         </li>
-                        <li class="nav-item container-fluid justify-content-end">
-                            <a href="contacto.html" class="nav-link">CONTACTO</a>
+                        <li
+                            class="nav-item container-fluid justify-content-end"
+                        >
+                            <a href="contacto.html" class="nav-link"
+                                >CONTACTO</a
+                            >
                         </li>
                     </ul>
                 </div>
@@ -81,81 +102,132 @@
                 <br />
             </section>
 
-            <section id="seccionDos" class="row container-fluid p-0 m-0 pt-5 pb-5">
+            <section
+                id="seccionDos"
+                class="row container-fluid p-0 m-0 pt-5 pb-5"
+            >
                 <div class="container col-xs-12 col-md-6 col-lg-3">
                     <img
                         src="resources/images/imagen 1.jpg"
-                        alt="Texto explicativo" 
-                        style="height: 215px; width: 100%;"
+                        alt="Texto explicativo"
+                        style="height: 215px; width: 100%"
                     />
                     <p class="mt-3 text-center">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Perspiciatis quidem quis a
-                        modi quibusdam sapiente, fuga quasi nihil ipsam
-                        iusto laudantium assumenda!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perspiciatis quidem quis a modi quibusdam sapiente, fuga
+                        quasi nihil ipsam iusto laudantium assumenda!
                     </p>
                 </div>
                 <div class="container col-xs-12 col-md-6 col-lg-3">
                     <img
                         src="resources/images/imagen 2.jpg"
                         alt="Texto explicativo"
-                        style="height: 215px; width: 100%;"
+                        style="height: 215px; width: 100%"
                     />
                     <p class="mt-3 text-center">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Perspiciatis quidem quis a
-                        modi quibusdam sapiente, fuga quasi nihil ipsam
-                        iusto laudantium assumenda!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perspiciatis quidem quis a modi quibusdam sapiente, fuga
+                        quasi nihil ipsam iusto laudantium assumenda!
                     </p>
                 </div>
                 <div class="container col-xs-12 col-md-6 col-lg-3">
                     <img
                         src="resources/images/imagen 3.png"
                         alt="Texto explicativo"
-                        style="height: 215px; width: 100%;"
+                        style="height: 215px; width: 100%"
                     />
                     <p class="mt-3 text-center">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Perspiciatis quidem quis a
-                        modi quibusdam sapiente, fuga quasi nihil ipsam
-                        iusto laudantium assumenda!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perspiciatis quidem quis a modi quibusdam sapiente, fuga
+                        quasi nihil ipsam iusto laudantium assumenda!
                     </p>
                 </div>
                 <div class="container col-xs-12 col-md-6 col-lg-3">
                     <img
                         src="resources/images/imagen 4.jpg"
                         alt="Texto explicativo"
-                        style="height: 215px; width: 100%;"
+                        style="height: 215px; width: 100%"
                     />
                     <p class="mt-3 text-center">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Perspiciatis quidem quis a
-                        modi quibusdam sapiente, fuga quasi nihil ipsam
-                        iusto laudantium assumenda!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perspiciatis quidem quis a modi quibusdam sapiente, fuga
+                        quasi nihil ipsam iusto laudantium assumenda!
                     </p>
-                </div> 
+                </div>
             </section>
 
             <section id="seccionTres" class="container-fluid pt-5 pb-5">
-                <h2 class="text-center">Gane un descuento de hasta un 40% en cualquiera de nuestros servicios</h2>
+                <h2 class="text-center">
+                    Gane un descuento de hasta un 40% en cualquiera de nuestros
+                    servicios
+                </h2>
                 <h6 class="text-center">Tiene 4 intentos...</h6>
-                <br>
+                <br />
                 <div class="container p-4">
                     <p class="text-center">
-                        <b>¿Que comando de la consola de Git/Linux nos permite ver el directorio de trabajo en el que estamos posicionados actualmente?</b>
+                        <b
+                            >¿Que comando de la consola de Git/Linux nos permite
+                            ver el directorio de trabajo en el que estamos
+                            posicionados actualmente?</b
+                        >
                     </p>
-                    <br>
-                    <input type="text" class="form-control" id="rtaAdivinanza" placeholder="Escriba aqui su respuesta..." required>
-                    <br>
+                    <br />
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="rtaAdivinanza"
+                        placeholder="Escriba aqui su respuesta..."
+                        required
+                    />
+                    <small id="intentosRestantes" class="pt-2"
+                        >Intentos restantes: 4
+                    </small>
+                    <br />
                     <div id="pistas" class="container-fluid">
-                        <p id="pista1"><b>Pista 1:</b> En ingles significa "Imprimir Directorio de Trabajo"</p>
-                        <p id="pista2"><b>Pista 2:</b> Tiene 3 letras</p>
+                        <p id="pista1" style="display: none">
+                            <b>Pista 1:</b> En ingles significa "Imprimir
+                            Directorio de Trabajo"
+                        </p>
+                        <p id="pista2" style="display: none">
+                            <b>Pista 2:</b> Tiene 3 letras
+                        </p>
                     </div>
-                    <br>
+                    <br />
                     <div class="row justify-content-center">
-                        <button type="submit" id="verificarAdivinanza" class="btn btn-primary" onclick="">
+                        <button
+                            type="submit"
+                            id="verificarAdivinanza"
+                            class="btn btn-primary"
+                            onclick="verificar_adivinanza(rtaAdivinanza)"
+                        >
                             <b>Verificar Respuesta</b>
                         </button>
+                    </div>
+                    <div class="container-fluid">
+                        <b
+                            class="alert alert-success row mt-4 mb-0 text-center"
+                            id="alertaCorrecto"
+                            style="display: none"
+                            >¡Felicidades, has acertado!</b
+                        >
+                        <b
+                            class="alert alert-danger row mt-4 mb-0 text-center"
+                            id="alertaVacio"
+                            style="display: none"
+                            >Ingrese una respuesta por favor</b
+                        >
+                        <b
+                            class="alert alert-danger row mt-4 mb-0 text-center"
+                            id="alertaIncorrecto"
+                            style="display: none"
+                            >Respuesta incorrecta, intenta nuevamente</b
+                        >
+                        <b
+                            class="alert alert-danger row mt-4 mb-0 text-center"
+                            id="alertaSinIntentos"
+                            style="display: none"
+                            >No le quedan mas intentos</b
+                        >
                     </div>
                 </div>
             </section>
@@ -171,8 +243,16 @@
                     >
                 </p>
             </span>
-            <a href="index.html" class="col-md-2 p-2 text-center m-auto" id="logoFooter">
-                <img src="resources/images/logo.png" alt="Logotipo" style="height: 100px; width: auto;"/>
+            <a
+                href="index.html"
+                class="col-md-2 p-2 text-center m-auto"
+                id="logoFooter"
+            >
+                <img
+                    src="resources/images/logo.png"
+                    alt="Logotipo"
+                    style="height: 100px; width: auto"
+                />
             </a>
             <div id="fraseFooter" class="col-md-5 p-2 text-center m-auto">
                 <h2>Lorem ipsum dolor, sit amet consectetur</h2>
